engine/test/electron/scripts/lexer/errors/invalid_char_dollar.e
// ERROR TEST: Dollar sign (not valid)
$variable
